@@ -1,3 +1,10 @@
+2000-01-24  Havoc Pennington  <hp@redhat.com>
+
+	* backends/xml-backend.c (resolve_address): base mode for creating
+	files and directories on the permissions of the root XML directory
+
+	* gconf/gconf.h: Clean up indentation
+
 2000-01-27  Elliot Lee  <sopwith@redhat.com>
 	* gconf/Makefile.am, standard-schemas/Makefile.am: Fix builddir != srcdir
 
